@@ -1,4 +1,4 @@
-count: 6
+count: 12
 width: 3
 height: 4
 
@@ -30,4 +30,34 @@ height: 4
 212
  2 
 2 2
+ 9 
+
+212
+ 2 
+2 2
+ 9 
+
+212
+ 2 
+2 2
+ 9 
+
+212
+ 2 
+2 2
+ 9 
+
+212
+ 2 
+2 2
+ 9 
+ 
+444
+ 4 
+4 4
+ 9 
+
+444
+ 4 
+4 4
  9 
